--- a/Move.toml
+++ b/Move.toml
@@ -7,3 +7,4 @@ Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-fram
 
 [addresses]
 my_first_package = "0x0"
+nfts = "0x0"
