--- a/Move.toml
+++ b/Move.toml
@@ -1,10 +1,9 @@
 [package]
-name = "my_first_package"
+name = "nfts"
 version = "0.0.1"
 
 [dependencies]
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/testnet" }
 
 [addresses]
-my_first_package = "0x0"
 nfts = "0x0"
